--- a/ak/requirements.txt
+++ b/ak/requirements.txt
@@ -20,6 +20,7 @@ numpy==2.1.3
     #   contourpy
     #   matplotlib
     #   pandas
+    #   scipy
 packaging==24.2
     # via matplotlib
 pandas==2.2.3
@@ -34,6 +35,8 @@ python-dateutil==2.9.0.post0
     #   pandas
 pytz==2024.2
     # via pandas
+scipy==1.14.1
+    # via -r requirements.in
 six==1.16.0
     # via python-dateutil
 tzdata==2024.2
